using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;


public class AnimParams
{
    public const string Idle = "idle";
    public const string Attack = "attack";
    public const string SpecialAttack = "specialattack";
    public const string Die = "die";
    public const string MoveSpeed = "movespeed";


    public const string StartCast = "startcast";
    public const string Casting = "casting";
    public const string EndCast = "endcast";

    public const string Action = "Action";

    public const int StopSpeed = 0;
    public const int WalkSpeed = 1;
    public const int RunSpeed = 2;
    public const int BackSpeed = -1;


    public const string Intro = "Intro";
    public const string Outro = "Outro";
    public const string Stage = "Stage";
    public const string Click = "Click";

    public const string DisplayWin = "DisplayWin";
    public const string DisplayLoss = "DisplayLoss";
    public const string DIsplayUnused = "DisplayUnused";



}